links-resume progress

--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -20,7 +20,7 @@
       property="og:url"
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
-    <meta name="color-scheme" content="light only">
+    <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
@@ -197,13 +197,19 @@
                 </a>
               </div>
               <p>
-                I hold a diploma in Software Practical Engineering from the
-                Technion and am currently studying Web Development at the
-                Digital Career Institute in Berlin. I’m passionate about
-                front-end development and design, set to graduate in February
-                2025. My portfolio reflects my focus on lightweight design,
-                performance, and accessibility. I am eager to start my career,
-                constantly refining my skills and showcasing new projects.
+                <span class="link-span"
+                  >I hold a diploma in Software Practical Engineering from the
+                  Technion and am currently studying Web Development at the
+                  <a href="https://digitalcareerinstitute.org/"
+                    >Digital Career Institute</a
+                  >
+                  in Berlin.</span
+                >
+                I’m passionate about front-end development and design, set to
+                graduate in February 2025. My portfolio reflects my focus on
+                lightweight design, performance, and accessibility. I am eager
+                to start my career, constantly refining my skills and showcasing
+                new projects.
               </p>
               <div class="btn-box">
                 <a
@@ -333,11 +339,18 @@
                   >
                   <h3>Web Development Course</h3>
                   <p>
-                    I'm currently enrolled in the Web Development course at the
-                    Digital Career Institute (DCI) in Berlin. The program covers
-                    full-stack development, focusing on modern front-end
-                    technologies like HTML, CSS, JavaScript, React, and back-end
-                    technologies such as Node.js and databases.
+                    <span class="link-span"
+                      >I'm currently enrolled in the Web Development course at
+                      the
+                      <a href="https://digitalcareerinstitute.org/"
+                        >Digital Career Institute (DCI)</a
+                      >
+                      in Berlin.</span
+                    >
+                    The program covers full-stack development, focusing on
+                    modern front-end technologies like HTML, CSS, JavaScript,
+                    React, and back-end technologies such as Node.js and
+                    databases.
                   </p>
                 </div>
               </div>
@@ -348,10 +361,15 @@
                   >
                   <h3>Orientations Course For Hi-Tech</h3>
                   <p>
-                    Completed an orientation course at DCI, Berlin, focused on
-                    Hi-Tech Web Development and Online Marketing. The course
-                    included final projects that showcased practical skills in
-                    these areas.
+                    <span class="link-span"
+                      >Completed an orientation course at
+                      <a href="https://digitalcareerinstitute.org/"
+                        >DCI Berlin</a
+                      >, focused on Hi-Tech Web Development and Online
+                      Marketing.</span
+                    >
+                    The course included final projects that showcased practical
+                    skills in these areas.
                   </p>
                 </div>
               </div>
