--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -203,14 +203,20 @@
                 </a>
               </div>
               <p>
-                Ich habe ein Diplom in Software Practical Engineering vom
-                Technion und studiere derzeit Webentwicklung am Digital Career
-                Institute in Berlin. Ich bin leidenschaftlich an
-                Front-End-Entwicklung und Design interessiert und werde im
-                Februar 2025 meinen Abschluss machen. Mein Portfolio spiegelt
-                meinen Fokus auf leichtes Design, Leistung und Barrierefreiheit
-                wider. Ich bin bestrebt, meine Karriere zu starten, verfeinere
-                ständig meine Fähigkeiten und präsentiere neue Projekte.
+                <span class="link-span"
+                  >Ich habe ein Diplom in Software Practical Engineering vom
+                  Technion und studiere derzeit Webentwicklung am
+                  <a href="https://digitalcareerinstitute.org/"
+                    >Digital Career Institute
+                  </a>
+                  in Berlin.</span
+                >
+                Ich bin leidenschaftlich an Front-End-Entwicklung und Design
+                interessiert und werde im Februar 2025 meinen Abschluss machen.
+                Mein Portfolio spiegelt meinen Fokus auf leichtes Design,
+                Leistung und Barrierefreiheit wider. Ich bin bestrebt, meine
+                Karriere zu starten, verfeinere ständig meine Fähigkeiten und
+                präsentiere neue Projekte.
               </p>
               <div class="btn-box">
                 <a
@@ -336,11 +342,17 @@
                   >
                   <h3>Webentwicklungs-Kurs</h3>
                   <p>
-                    Ich bin derzeit im Webentwicklungs-Kurs am Digital Career
-                    Institute (DCI) in Berlin eingeschrieben. Das Programm
-                    umfasst die Full-Stack-Entwicklung und konzentriert sich auf
-                    moderne Front-End-Technologien wie HTML, CSS, JavaScript,
-                    React und Back-End-Technologien wie Node.js und Datenbanken.
+                    <span class="link-span">
+                      Ich bin derzeit im Webentwicklungs-Kurs am
+                      <a href="https://digitalcareerinstitute.org/"
+                        >Digital Career Institute (DCI)</a
+                      >
+                      in Berlin eingeschrieben.</span
+                    >
+                    Das Programm umfasst die Full-Stack-Entwicklung und
+                    konzentriert sich auf moderne Front-End-Technologien wie
+                    HTML, CSS, JavaScript, React und Back-End-Technologien wie
+                    Node.js und Datenbanken.
                   </p>
                 </div>
               </div>
@@ -351,10 +363,14 @@
                   >
                   <h3>Orientierungskurs für Hi-Tech</h3>
                   <p>
-                    Habe einen Orientierungskurs am DCI in Berlin abgeschlossen,
-                    der sich auf Hi-Tech-Webentwicklung und Online-Marketing
-                    konzentrierte. Der Kurs umfasste Abschlussprojekte, die
-                    praktische Fähigkeiten in diesen Bereichen demonstrierten.
+                    <span class="link-span"
+                      >Ich habe einen Orientierungskurs am
+                      <a href="https://digitalcareerinstitute.org/">DCI </a> in
+                      Berlin abgeschlossen, der sich auf Hi-Tech-Webentwicklung
+                      und Online-Marketing konzentrierte.</span
+                    >
+                    Der Kurs umfasste Abschlussprojekte, die praktische
+                    Fähigkeiten in diesen Bereichen demonstrierten.
                   </p>
                 </div>
               </div>
