--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -199,14 +199,27 @@
               </a>
             </div>
             <p>
-              Ich habe ein Diplom in Software Practical Engineering vom Technion
-              und studiere derzeit Webentwicklung am Digital Career Institute in
-              Berlin. Ich bin leidenschaftlich an Front-End-Entwicklung und
-              Design interessiert und werde im Februar 2025 meinen Abschluss
-              machen. Mein Portfolio spiegelt meinen Fokus auf leichtes Design,
-              Leistung und Barrierefreiheit wider. Ich bin bestrebt, meine
-              Karriere zu starten, verfeinere ständig meine Fähigkeiten und
-              präsentiere neue Projekte.
+              <span class="link-span"
+                >Ich habe ein Diplom in Software
+                <a href="https://www.pet.ac.il/" target="_blank"
+                  >Practical Engineering</a
+                >
+                vom
+                <a href="https://www.technion.ac.il/en/home-2/" target="_blank"
+                  >Technion</a
+                >
+                und studiere derzeit Webentwicklung am
+                <a href="https://digitalcareerinstitute.org/" target="_blank"
+                  >Digital Career Institute</a
+                >
+                in Berlin.</span
+              >
+              Ich bin leidenschaftlich an Front-End-Entwicklung und Design
+              interessiert und werde im Februar 2025 meinen Abschluss machen.
+              Mein Portfolio spiegelt meinen Fokus auf leichtes Design, Leistung
+              und Barrierefreiheit wider. Ich bin bestrebt, meine Karriere zu
+              starten, verfeinere ständig meine Fähigkeiten und präsentiere neue
+              Projekte.
             </p>
             <div class="btn-box">
               <a
@@ -232,13 +245,16 @@
               >
               <h3>Kundenservice-Mitarbeiter</h3>
               <p>
-                Arbeitete als Kundenservice-Mitarbeiter bei Concentrix in Berlin
-                und bot technische Unterstützung für Werbetreibende und
-                Geschäftsinhaber auf sozialen Medien an. Bearbeitete Anfragen
-                über verschiedene Kanäle, einschließlich Chat, E-Mail, Anrufe
-                und Nachrichten in sozialen Medien. Demonstrierte den Wert von
-                Werbelösungen und lieferte After-Sales-Support für
-                Selbstbedienungsprodukte.
+                <span class="link-span"
+                  >Arbeitete als Kundenservice-Mitarbeiterin bei
+                  <a href="https://www.concentrix.com/de/" target="_blank"
+                    >Concentrix</a
+                  >
+                  in Berlin und bot technische Unterstützung für Werbetreibende
+                  in sozialen Medien.</span
+                >
+                Bearbeitete Anfragen über Chat, E-Mail und Anrufe und lieferte
+                After-Sales-Support.
               </p>
             </div>
           </div>
@@ -249,10 +265,18 @@
               >
               <h3>Inhaltsmoderator</h3>
               <p>
-                Überprüfte nutzergenerierte Inhalte auf sozialen Medien in
-                Hebräisch und Englisch, um die Einhaltung von Richtlinien und
-                Vorgaben sicherzustellen, und ergriff Maßnahmen bei Verstößen,
-                um die Gemeinschaftsstandards aufrechtzuerhalten.
+                <span class="link-span">
+                  Überprüfte
+                  <a
+                    href="https://berlin-jobs-teleperformance.career.softgarden.de/"
+                    target="_blank"
+                    >nutzergenerierte Inhalte</a
+                  >
+                  auf sozialen Medien in Hebräisch und Englisch, um die
+                  Einhaltung von Richtlinien und Vorgaben sicherzustellen, und
+                  ergriff Maßnahmen bei Verstößen, um die Gemeinschaftsstandards
+                  aufrechtzuerhalten.</span
+                >
               </p>
             </div>
           </div>
@@ -263,11 +287,19 @@
               >
               <h3>Datenanalyst</h3>
               <p>
-                Als Datenanalyst für den israelischen Aktienmarkt verbesserte
-                ich die Datenqualität und Effizienz. Zudem leitete ich ein
-                Übersetzungsprojekt, bei dem ich Fehler in der neuen Software
-                (SDL) sorgfältig überprüfte und korrigierte, um eine optimale
-                Funktionalität sicherzustellen.
+                <span class="link-span"
+                  >Als
+                  <a
+                    href="https://www.lseg.com/en/data-analytics"
+                    target="_blank"
+                    >Datenanalyst</a
+                  >
+                  für den israelischen Aktienmarkt verbesserte ich die
+                  Datenqualität und Effizienz.</span
+                >
+                Zudem leitete ich ein Übersetzungsprojekt, bei dem ich Fehler in
+                der neuen Software (SDL) sorgfältig überprüfte und korrigierte,
+                um eine optimale Funktionalität sicherzustellen.
               </p>
             </div>
           </div>
@@ -284,17 +316,22 @@
               >
               <h3>Verkäuferin, Buchhalterin und R.M.A. Sachbearbeiterin</h3>
               <p>
-                Während meiner Zeit bei K.S.P. Computers und Cellular übernahm
-                ich verschiedene Rollen, einschließlich Verkauf und Beratung für
-                Computer und Elektronik, wo ich Kundenanfragen, Rückgaben und
-                Beschwerden effektiv bearbeitete. Ich unterstützte auch die
-                RMA-Abteilung, indem ich defekte Produkte testete und die
-                Logistik- und Entschädigungsprozesse mit Lieferanten verwaltete.
-                Darüber hinaus überprüfte ich Rechnungen auf Richtigkeit,
-                unterstützte das Verkaufspersonal mit Kassensoftware und
-                überwachte den Warenbestand, um eine ordnungsgemäße Handhabung
-                neuer Produkte sicherzustellen und Verfahrensverstöße sowie
-                Diebstahl zu verhindern.
+                <span class="link-span"
+                  >Während meiner Zeit bei
+                  <a href="https://ksp.co.il/web/" target="_blank"
+                    >K.S.P. Computers und Cellular</a
+                  >
+                  übernahm ich verschiedene Rollen, einschließlich Verkauf und
+                  Beratung für Computer und Elektronik, wo ich Kundenanfragen,
+                  Rückgaben und Beschwerden effektiv bearbeitete.</span
+                >
+                Ich unterstützte auch die RMA-Abteilung, indem ich defekte
+                Produkte testete und die Logistik- und Entschädigungsprozesse
+                mit Lieferanten verwaltete. Darüber hinaus überprüfte ich
+                Rechnungen auf Richtigkeit, unterstützte das Verkaufspersonal
+                mit Kassensoftware und überwachte den Warenbestand, um eine
+                ordnungsgemäße Handhabung neuer Produkte sicherzustellen und
+                Verfahrensverstöße sowie Diebstahl zu verhindern.
               </p>
             </div>
           </div>
@@ -305,12 +342,21 @@
               >
               <h3>Lehrerin für Computerberufe</h3>
               <p>
-                Als Lehrerin im Lehava-Projekt bildete ich diverse Schüler im
-                Umgang mit Computern und Internetdiensten aus. Ich bot
-                individuelle Unterstützung für Personen mit verschiedenen
-                Herausforderungen und behandelte Themen wie Office-Software,
-                Online-Regierungsdienste, Grundlagenprogrammierung und
-                Informationsbeschaffung im Internet.
+                <span class="link-span"
+                  >Als Lehrerin im
+                  <a
+                    href="https://www.gov.il/he/pages/most_lehava"
+                    target="_blank"
+                    >Lehava-Projekt</a
+                  >
+                  bildete ich diverse Schüler im Umgang mit Computern und
+                  Internetdiensten aus.</span
+                >
+                Ich bot individuelle Unterstützung für Personen mit
+                verschiedenen Herausforderungen und behandelte Themen wie
+                Office-Software, Online-Regierungsdienste,
+                Grundlagenprogrammierung und Informationsbeschaffung im
+                Internet.
               </p>
             </div>
           </div>
@@ -329,11 +375,17 @@
               >
               <h3>Webentwicklungs-Kurs</h3>
               <p>
-                Ich bin derzeit im Webentwicklungs-Kurs am Digital Career
-                Institute (DCI) in Berlin eingeschrieben. Das Programm umfasst
-                die Full-Stack-Entwicklung und konzentriert sich auf moderne
-                Front-End-Technologien wie HTML, CSS, JavaScript, React und
-                Back-End-Technologien wie Node.js und Datenbanken.
+                <span class="link-span">
+                  Ich bin derzeit im Webentwicklungs-Kurs am
+                  <a href="https://digitalcareerinstitute.org/" target="_blank"
+                    >Digital Career Institute (DCI)</a
+                  >
+                  in Berlin eingeschrieben.</span
+                >
+                Das Programm umfasst die Full-Stack-Entwicklung und konzentriert
+                sich auf moderne Front-End-Technologien wie HTML, CSS,
+                JavaScript, React und Back-End-Technologien wie Node.js und
+                Datenbanken.
               </p>
             </div>
           </div>
@@ -344,10 +396,16 @@
               >
               <h3>Orientierungskurs für Hi-Tech</h3>
               <p>
-                Habe einen Orientierungskurs am DCI in Berlin abgeschlossen, der
-                sich auf Hi-Tech-Webentwicklung und Online-Marketing
-                konzentrierte. Der Kurs umfasste Abschlussprojekte, die
-                praktische Fähigkeiten in diesen Bereichen demonstrierten.
+                <span class="link-span"
+                  >Habe einen Orientierungskurs am
+                  <a href="https://digitalcareerinstitute.org/" target="_blank"
+                    >DCI</a
+                  >
+                  in Berlin abgeschlossen, der sich auf Hi-Tech-Webentwicklung
+                  und Online-Marketing konzentrierte.</span
+                >
+                Der Kurs umfasste Abschlussprojekte, die praktische Fähigkeiten
+                in diesen Bereichen demonstrierten.
               </p>
             </div>
           </div>
@@ -358,12 +416,23 @@
               >
               <h3>Praktische Ingenieurin in Software</h3>
               <p>
-                Habe am Technion – Israelisches Institut für Technologie mit
-                einem Diplom in Praktischer Ingenieurwissenschaft in
-                Softwareprogrammierung abgeschlossen. Mein Abschlussprojekt war
-                ein in Java basiertes 'Snake'-Spiel mit 10 Levels. Während
-                meines Studiums sammelte ich Erfahrung in mehreren
-                Programmiersprachen, darunter Java, C, C#, PHP, HTML und CSS.
+                <span class="link-span">
+                  Habe am
+                  <a
+                    href="https://www.technion.ac.il/en/home-2/"
+                    target="_blank"
+                    >Technion – Israelisches Institut für Technologie</a
+                  >
+                  mit einem Diplom in
+                  <a href="https://www.pet.ac.il/"
+                    >Praktischer Ingenieurwissenschaft</a
+                  >
+                  in Softwareprogrammierung abgeschlossen.</span
+                >
+                Mein Abschlussprojekt war ein in Java basiertes 'Snake'-Spiel
+                mit 10 Levels. Während meines Studiums sammelte ich Erfahrung in
+                mehreren Programmiersprachen, darunter Java, C, C#, PHP, HTML
+                und CSS.
               </p>
             </div>
           </div>
@@ -380,8 +449,20 @@
               >
               <h3>Microsoft-Technikerin</h3>
               <p>
-                Erwarb die Zertifizierung als Microsoft Certified Desktop
-                Support Technician (MCDST) an der HaMichlala LeMinhal in Haifa.
+                <span class="link-span">
+                  Erwarb die Zertifizierung als
+                  <a
+                    href="../Files/MCDST_Datasheet.pdf"
+                    download="MCDST_Datasheet"
+                    >Microsoft Certified Desktop Support Technician (MCDST)</a
+                  >
+                  an der
+                  <a
+                    href="https://college.org.il/extensions/%D7%97%D7%99%D7%A4%D7%94/"
+                    target="_blank"
+                    >HaMichlala LeMinhal in Haifa.</a
+                  ></span
+                >
                 Fokus lag auf technischer Unterstützung und Fehlerbehebung für
                 Microsoft Windows-Betriebssysteme.
               </p>
@@ -394,10 +475,16 @@
               >
               <h3>Deutschkurs B2</h3>
               <p>
-                Absolvierte einen professionellen Deutschkurs (B2-Zertifikat) an
-                der ZeBus Schule in Berlin und bestand erfolgreich die
-                telc-Prüfung, um die Sprachkenntnisse für eine effektive
-                Kommunikation am Arbeitsplatz zu verbessern.
+                <span class="link-span"
+                  >Absolvierte einen professionellen Deutschkurs (B2-Zertifikat)
+                  an der
+                  <a href="https://www.zebus-ev.de/" target="_blank"
+                    >ZeBus Schule
+                  </a>
+                  in Berlin und bestand erfolgreich die telc-Prüfung, um die
+                  Sprachkenntnisse für eine effektive Kommunikation am
+                  Arbeitsplatz zu verbessern.</span
+                >
               </p>
             </div>
           </div>
@@ -408,10 +495,18 @@
               >
               <h3>Integrationskurs</h3>
               <p>
-                Absolvierte einen Integrationskurs an der Volkshochschule
-                Spandau, Deutschland, und erlangte das telc B1-Zertifikat, um
-                die Sprachkenntnisse für eine bessere Integration und
-                Kommunikation in einem deutschsprachigen Umfeld zu verbessern.
+                <span class="link-span"
+                  >Absolvierte einen Integrationskurs an der
+                  <a
+                    href="https://www.berlin.de/vhs/volkshochschulen/spandau/"
+                    target="_blank"
+                    >Volkshochschule Spandau,</a
+                  >
+                  Deutschland, und erlangte das telc B1-Zertifikat, um die
+                  Sprachkenntnisse für eine bessere Integration und
+                  Kommunikation in einem deutschsprachigen Umfeld zu
+                  verbessern.</span
+                >
               </p>
             </div>
           </div>
