--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -198,18 +198,28 @@
               </div>
               <p>
                 <span class="link-span"
-                  >I hold a diploma in Software Practical Engineering from the
-                  Technion and am currently studying Web Development at the
-                  <a href="https://digitalcareerinstitute.org/"
+                  >I hold a diploma in Software
+                  <a href="https://www.pet.ac.il/" target="_blank"
+                    >Practical Engineering</a
+                  >
+                  from the
+                  <a
+                    href="https://www.technion.ac.il/en/home-2/"
+                    target="_blank"
+                    >Technion</a
+                  >
+                  and am currently studying Web Development at the
+                  <a href="https://digitalcareerinstitute.org/" target="_blank"
                     >Digital Career Institute</a
                   >
                   in Berlin.</span
                 >
                 I’m passionate about front-end development and design, set to
-                graduate in February 2025. My portfolio reflects my focus on
-                lightweight design, performance, and accessibility. I am eager
-                to start my career, constantly refining my skills and showcasing
-                new projects.
+                graduate in February 2025.
+                <a href="../index.html" target="_blank">My portfolio </a>
+                reflects my focus on lightweight design, performance, and
+                accessibility. I am eager to start my career, constantly
+                refining my skills and showcasing new projects.
               </p>
               <div class="btn-box">
                 <a
@@ -235,13 +245,18 @@
                   >
                   <h3>Customer support agent</h3>
                   <p>
-                    Worked as a customer support agent at Concentrix in Berlin,
-                    providing technical assistance to advertisers and business
-                    owners on social media platforms. Managed inquiries through
-                    various channels, including chat, email, calls, and social
-                    media messaging. Demonstrated the value of advertising
-                    solutions and delivered post-sales support for self-service
-                    products.
+                    <span class="link-span"
+                      >Worked as a customer support agent at
+                      <a href="https://www.concentrix.com/" target="_blank"
+                        >Concentrix</a
+                      >
+                      in Berlin, providing technical assistance to advertisers
+                      and business owners on social media platforms.</span
+                    >
+                    Managed inquiries through various channels, including chat,
+                    email, calls, and social media messaging. Demonstrated the
+                    value of advertising solutions and delivered post-sales
+                    support for self-service products.
                   </p>
                 </div>
               </div>
@@ -252,10 +267,16 @@
                   >
                   <h3>Content Moderator</h3>
                   <p>
-                    Reviewed user-generated content on social media platforms in
-                    Hebrew and English, ensuring compliance with policies and
-                    guidelines, and took action on violations to maintain
-                    community standards.
+                    <span class="link-span"
+                      ><a
+                        href="https://berlin-jobs-teleperformance.career.softgarden.de/en/"
+                        target="_blank"
+                        >Reviewed user-generated content</a
+                      >
+                      on social media platforms in Hebrew and English, ensuring
+                      compliance with policies and guidelines, and took action
+                      on violations to maintain community standards.</span
+                    >
                   </p>
                 </div>
               </div>
@@ -266,11 +287,18 @@
                   >
                   <h3>Data Analyst</h3>
                   <p>
-                    As a Data Analyst for the Israeli stock exchange market, I
-                    enhanced data accuracy and efficiency. Additionally, I led a
-                    translation project, meticulously checking and correcting
-                    errors in the new software (SDL) to ensure optimal
-                    functionality.
+                    <span class="link-span"
+                      >As a
+                      <a
+                        href="https://www.lseg.com/en/data-analytics"
+                        target="_blank"
+                        >Data Analyst</a
+                      >for the Israeli stock exchange market, I enhanced data
+                      accuracy and efficiency.</span
+                    >
+                    Additionally, I led a translation project, meticulously
+                    checking and correcting errors in the new software (SDL) to
+                    ensure optimal functionality.
                   </p>
                 </div>
               </div>
@@ -291,16 +319,22 @@
                   >
                   <h3>Saleswoman, Bookkeeper and R.M.A clerk</h3>
                   <p>
-                    During my time at K.S.P Computers and Cellular, I engaged in
-                    various roles, including sales and consulting for computers
-                    and electronics, where I effectively addressed customer
-                    inquiries, returns, and complaints. I also assisted in the
-                    RMA department by testing faulty products and managing
-                    logistics and compensation processes with suppliers.
-                    Additionally, I reviewed invoices for accuracy, supported
-                    sales staff with cash register software, and monitored
-                    inventory to ensure proper handling of new products and
-                    prevent procedural violations and theft.
+                    <span class="link-span">
+                      During my time at
+                      <a href="https://ksp.co.il/web/" target="_blank"
+                        >K.S.P Computers and Cellular,</a
+                      >
+                      I engaged in various roles, including sales and consulting
+                      for computers and electronics, where I effectively
+                      addressed customer inquiries, returns, and
+                      complaints.</span
+                    >
+                    I also assisted in the RMA department by testing faulty
+                    products and managing logistics and compensation processes
+                    with suppliers. Additionally, I reviewed invoices for
+                    accuracy, supported sales staff with cash register software,
+                    and monitored inventory to ensure proper handling of new
+                    products and prevent procedural violations and theft.
                   </p>
                 </div>
               </div>
@@ -311,12 +345,20 @@
                   >
                   <h3>Teacher of computer professions</h3>
                   <p>
-                    As a teacher in the Lehava project, I educated diverse
-                    students on computer usage and Internet services. I provided
-                    personalized support for individuals facing various
-                    challenges, covering topics like Office software, online
-                    government services, basic programming, and information
-                    retrieval online.
+                    <span class="link-span"
+                      >As a teacher in the
+                      <a
+                        href="https://www.gov.il/he/pages/most_lehava"
+                        target="_blank"
+                        >"Lehava"</a
+                      >
+                      project, I educated diverse students on computer usage and
+                      Internet services.</span
+                    >
+                    I provided personalized support for individuals facing
+                    various challenges, covering topics like Office software,
+                    online government services, basic programming, and
+                    information retrieval online.
                   </p>
                 </div>
               </div>
@@ -342,7 +384,9 @@
                     <span class="link-span"
                       >I'm currently enrolled in the Web Development course at
                       the
-                      <a href="https://digitalcareerinstitute.org/"
+                      <a
+                        href="https://digitalcareerinstitute.org/"
+                        target="_blank"
                         >Digital Career Institute (DCI)</a
                       >
                       in Berlin.</span
@@ -363,7 +407,9 @@
                   <p>
                     <span class="link-span"
                       >Completed an orientation course at
-                      <a href="https://digitalcareerinstitute.org/"
+                      <a
+                        href="https://digitalcareerinstitute.org/"
+                        target="_blank"
                         >DCI Berlin</a
                       >, focused on Hi-Tech Web Development and Online
                       Marketing.</span
@@ -380,12 +426,23 @@
                   >
                   <h3>Software Practical Engineering</h3>
                   <p>
-                    Graduated from the Technion – Israeli Institute of
-                    Technology with a Practical Engineering diploma in Software
-                    Programming. My final project was a Java-based 'Snake' game
-                    featuring 10 levels. During my studies, I gained experience
-                    in multiple programming languages, including Java, C, C#,
-                    PHP, HTML, and CSS.
+                    <span class="link-span"
+                      >Graduated from the
+                      <a
+                        href="https://www.technion.ac.il/en/home-2/"
+                        target="_blank"
+                        >Technion – Israeli Institute of Technology</a
+                      >
+                      with a
+                      <a href="https://www.pet.ac.il/" target="_blank"
+                        >Practical Engineering</a
+                      >
+                      diploma in Software Programming.</span
+                    >
+                    My final project was a Java-based 'Snake' game featuring 10
+                    levels. During my studies, I gained experience in multiple
+                    programming languages, including Java, C, C#, PHP, HTML, and
+                    CSS.
                   </p>
                 </div>
               </div>
@@ -404,8 +461,22 @@
                   >
                   <h3>Microsoft Technician</h3>
                   <p>
-                    Earned Microsoft Certified Desktop Support Technician
-                    (MCDST) certification from HaMichlala LeMinhal, Haifa.
+                    <span class="link-span">
+                      Earned
+                      <a
+                        href="../Files/MCDST_Datasheet.pdf
+                      "
+                        download="MCDST_Datasheet.pdf"
+                        >Microsoft Certified Desktop Support Technician
+                        (MCDST)</a
+                      >
+                      certification from
+                      <a
+                        href="https://college.org.il/extensions/%D7%97%D7%99%D7%A4%D7%94/"
+                        target="_blank"
+                        >HaMichlala LeMinhal, Haifa.</a
+                      >
+                    </span>
                     Focused on providing technical support and troubleshooting
                     for Microsoft Windows operating systems.
                   </p>
@@ -418,10 +489,16 @@
                   >
                   <h3>German Course B2</h3>
                   <p>
-                    Completed a professional German language course (B2
-                    Zertifikat) at ZeBus Schule, Berlin, and successfully passed
-                    the telc exam, enhancing language proficiency for effective
-                    communication in the workplace.
+                    <span class="link-span"
+                      >Completed a professional German language course (B2
+                      Zertifikat) at
+                      <a href="https://www.zebus-ev.de/" target="_blank"
+                        >ZeBus Schule,</a
+                      >
+                      Berlin, and successfully passed the telc exam, enhancing
+                      language proficiency for effective communication in the
+                      workplace.</span
+                    >
                   </p>
                 </div>
               </div>
@@ -432,10 +509,17 @@
                   >
                   <h3>Integration Course</h3>
                   <p>
-                    Completed an integration course at Volkshochschule Spandau,
-                    Germany, and achieved the telc B1 certificate, improving
-                    language skills for better integration and communication in
-                    a German-speaking environment.
+                    <span class="link-span"
+                      >Completed an integration course at
+                      <a
+                        href="https://www.berlin.de/vhs/volkshochschulen/spandau/"
+                        target="_blank"
+                        >Volkshochschule Spandau,</a
+                      >
+                      Germany, and achieved the telc B1 certificate, improving
+                      language skills for better integration and communication
+                      in a German-speaking environment.</span
+                    >
                   </p>
                 </div>
               </div>
